Backed out 2 changesets for breaking builds (bug 856042)

--- a/dom/Makefile.in
+++ b/dom/Makefile.in
@@ -19,6 +19,7 @@ PARALLEL_DIRS = \
   interfaces/html \
   interfaces/events \
   interfaces/devicestorage \
+  interfaces/contacts \
   interfaces/settings \
   interfaces/stylesheets \
   interfaces/sidebar \
@@ -46,6 +47,7 @@ PARALLEL_DIRS += \
   bindings \
   battery \
   browser-element \
+  contacts \
   alarm \
   devicestorage \
   file \
