--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -176,6 +176,7 @@
 #endif
 @BINPATH@/components/dom_camera.xpt
 @BINPATH@/components/dom_canvas.xpt
+@BINPATH@/components/dom_contacts.xpt
 @BINPATH@/components/dom_alarm.xpt
 @BINPATH@/components/dom_core.xpt
 @BINPATH@/components/dom_css.xpt
@@ -481,6 +482,8 @@
 @BINPATH@/components/nsIDService.js
 @BINPATH@/components/Identity.manifest
 
+@BINPATH@/components/ContactManager.js
+@BINPATH@/components/ContactManager.manifest
 @BINPATH@/components/AlarmsManager.js
 @BINPATH@/components/AlarmsManager.manifest
 @BINPATH@/components/TCPSocket.js
